--- a/playbook.yml
+++ b/playbook.yml
@@ -107,8 +107,11 @@
   - name: Sync wordpress contents to virtualhost
     sudo: true
     synchronize:
-     src: "/tmp/wordpress"
+     src: "/tmp/wordpress/"
      dest: "/var/www/{{ your_domain_names }}/"
+     owner: "root"
+     groups: "root"
+     mod: 0755
 
   - name: Copy template new wp-config.php to virtualhost
     sudo: true
